modules/aws_network/main.tf
##
## Core AWS Plumbing
##
#resource "aws_vpc" "vpc" {
#  cidr_block           = var.vpc_cidr
#  enable_dns_hostnames = true
#  enable_dns_support   = true
#
#  tags = {
#    Name        = "${var.environment}-vpc-${var.region}"
#    Environment = "${var.environment}"
#  }
#}
#
#resource "aws_default_route_table" "default" {
#  default_route_table_id = aws_vpc.vpc.default_route_table_id
#
#  tags = {
#    Name        = "${var.environment}-default-rtb"
#    Environment = var.environment
#  }
#}
#
## Subnets
## Internet Gateway for Public Subnet
## resource "aws_internet_gateway" "igw" {
##   vpc_id = aws_vpc.vpc.id
##   tags = {
##     Name        = "${var.environment}-igw"
##     Environment = var.environment
##   }
## }
#
## Elastic-IP (eip) for NAT
## resource "aws_eip" "nat_eip" {
##   vpc        = true
##   depends_on = [aws_internet_gateway.igw]
## }
#
## NAT
## resource "aws_nat_gateway" "nat" {
##   allocation_id = aws_eip.nat_eip.id
##   subnet_id     = element(aws_subnet.public_subnet.*.id, 0)
##
##   tags = {
##     Name        = "nat"
##     Environment = "${var.environment}"
##   }
## }
#
## Public subnet
#resource "aws_subnet" "public_subnet" {
#  vpc_id                  = aws_vpc.vpc.id
#  count                   = length(var.public_subnets_cidr)
#  cidr_block              = element(var.public_subnets_cidr, count.index)
#  availability_zone       = element(var.availability_zones, count.index)
#  map_public_ip_on_launch = true
#
#  tags = {
#    Name        = "${var.environment}-${element(var.availability_zones, count.index)}-public-subnet"
#    Environment = "${var.environment}"
#  }
#}
#
## resource "aws_ec2_subnet_cidr_reservation" "public_subnet" {
##   count            = length(var.public_subnets_cidr)
##   cidr_block       = element(var.public_subnets_dhcp_cidr, count.index)
##   reservation_type = "prefix"
##   subnet_id        = element(aws_subnet.public_subnet.*.id, count.index)
## }
#
#
## Private Subnet
#resource "aws_subnet" "private_subnet" {
#  vpc_id                  = aws_vpc.vpc.id
#  count                   = length(var.private_subnets_cidr)
#  cidr_block              = element(var.private_subnets_cidr, count.index)
#  availability_zone       = element(var.availability_zones, count.index)
#  map_public_ip_on_launch = false
#
#  tags = {
#    Name        = "${var.environment}-${element(var.availability_zones, count.index)}-private-subnet"
#    Environment = "${var.environment}"
#  }
#}
#
## resource "aws_ec2_subnet_cidr_reservation" "private_subnet" {
##   count            = length(var.private_subnets_cidr)
##   cidr_block       = element(var.private_subnets_dhcp_cidr, count.index)
##   reservation_type = "prefix"
##   subnet_id        = element(aws_subnet.private_subnet.*.id, count.index)
## }
#
## Routing tables to route traffic for Private Subnet
#resource "aws_route_table" "private" {
#  vpc_id = aws_vpc.vpc.id
#
#  tags = {
#    Name        = "${var.environment}-private-rtb"
#    Environment = "${var.environment}"
#  }
#}
#
## Routing tables to route traffic for Public Subnet
#resource "aws_route_table" "public" {
#  vpc_id = aws_vpc.vpc.id
#
#  tags = {
#    Name        = "${var.environment}-public-rtb"
#    Environment = "${var.environment}"
#  }
#}
#
## Route for Internet Gateway
#resource "aws_route" "public_internet_gateway" {
#  route_table_id         = aws_route_table.public.id
#  destination_cidr_block = "0.0.0.0/0"
#  gateway_id             = aws_internet_gateway.igw.id
#}
#
## Route for NAT
#resource "aws_route" "private_nat_gateway" {
#  route_table_id         = aws_route_table.private.id
#  destination_cidr_block = "0.0.0.0/0"
#  nat_gateway_id         = aws_nat_gateway.nat.id
#}
#
## Route table associations for both Public & Private Subnets
#resource "aws_route_table_association" "public" {
#  count          = length(var.public_subnets_cidr)
#  subnet_id      = element(aws_subnet.public_subnet.*.id, count.index)
#  route_table_id = aws_route_table.public.id
#}
#
#resource "aws_route_table_association" "private" {
#  count          = length(var.private_subnets_cidr)
#  subnet_id      = element(aws_subnet.private_subnet.*.id, count.index)
#  route_table_id = aws_route_table.private.id
#}
#
## Default Security Group of VPC
#resource "aws_security_group" "default" {
#  name        = "${var.environment}-default-sg"
#  description = "Default SG to alllow traffic from the VPC"
#  vpc_id      = aws_vpc.vpc.id
#  depends_on = [
#    aws_vpc.vpc
#  ]
#
#  ingress {
#    from_port = "0"
#    to_port   = "0"
#    protocol  = "-1"
#    self      = true
#  }
#
#  egress {
#    from_port = "0"
#    to_port   = "0"
#    protocol  = "-1"
#    self      = true
#  }
#
#  tags = {
#    Environment = "${var.environment}"
#  }
#}
